```mermaid
classDiagram
    %% Repository层类图

    class SearchResultRepository {
        <<Repository>> 原始结果仓储
        -string collection_name = "search_results"
        +save_results(results: List~SearchResult~) List~string~
        +get_by_id(result_id: string) SearchResult
        +get_by_task(task_id: string, page: int, page_size: int) tuple
        +get_latest_results(task_id: string, limit: int) List~SearchResult~
        +delete_results_by_task(task_id: string) int
        -_result_to_dict(result: SearchResult) dict
        -_dict_to_result(data: dict) SearchResult
    }

    class ProcessedResultRepository {
        <<Repository>> 处理结果仓储
        -string collection_name = "processed_results"
        +create_pending_result(raw_result_id: string, task_id: string) ProcessedResult
        +update_processing_status(result_id: string, status: ProcessedStatus) bool
        +save_ai_result(result_id: string, translated_title: string, ...) bool
        +get_by_id(result_id: string) ProcessedResult
        +get_by_raw_result_id(raw_result_id: string) ProcessedResult
        +get_by_task(task_id: string, status: ProcessedStatus, page: int, page_size: int) tuple
        +update_user_action(result_id: string, status: ProcessedStatus, ...) bool
        +get_status_statistics(task_id: string) dict
        +get_failed_results(max_retry: int) List~ProcessedResult~
        -_result_to_dict(result: ProcessedResult) dict
        -_dict_to_result(data: dict) ProcessedResult
    }

    class SearchResult {
        <<Entity>>
    }

    class ProcessedResult {
        <<Entity>>
    }

    class MongoDBConnection {
        <<Infrastructure>>
        +get_mongodb_database() AsyncIOMotorDatabase
    }

    %% 依赖关系
    SearchResultRepository --> SearchResult : manages
    SearchResultRepository --> MongoDBConnection : uses
    ProcessedResultRepository --> ProcessedResult : manages
    ProcessedResultRepository --> MongoDBConnection : uses
    ProcessedResult ..> SearchResult : references

    %% 注释
    note for SearchResultRepository "职责：\n1. 原始数据的CRUD操作\n2. 批量写入返回ID列表\n3. 只读查询（不包含状态管理）\n\n⚠️ 不支持更新操作（immutable）"

    note for ProcessedResultRepository "职责：\n1. 创建待处理记录\n2. AI处理状态管理\n3. 保存AI结果\n4. 用户操作管理\n5. 状态统计和重试查询"
```
